# scentrees-python

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
scentrees/: __init__.py  kernel_density.py  lattice_approximation.py  plotting_utils.py  stochastic_paths.py  tree_approximation.py  tree_structure.py
tests/: __init__.py  test_scentrees.py  test_seed_determinism.py
